--- a/projet1/src/app/liste-films/liste-films.component.html
+++ b/projet1/src/app/liste-films/liste-films.component.html
@@ -1,11 +1,13 @@
 <h2>liste de films</h2>
 <div class="bloc">
-    <div>
-    <h4>Nom du film : {{tabFilms[0].nomFilm}} </h4>
-    <img class="image" [src]='tabFilms[0].imageFilm'><br>
-    <button (click)="onJaime(0)">J’aime</button> {{tabFilms[0].nbJaime}}<br>
-    <button (click)="onJaimePas(0)">J’aime pas</button> {{tabFilms[0].nbJeNaimeps}}<br>
+    <div *ngFor="let f of tabFilms ; let index=index">
+    <h4>Nom du film : {{f.nomFilm}} </h4>
+    <img class="image" [src]='f.imageFilm'><br>
+    <button (click)="onJaime(index)">J’aime</button> {{f.nbJaime}}<br>
+    <button (click)="onJaimePas(index)">J’aime pas</button> {{f.nbJeNaimeps}}<br>
     </div>
+     <!--
+
     <div>
     <h4>Nom du film : {{tabFilms[1].nomFilm}} </h4>
     <img class="image" [src]='tabFilms[1].imageFilm'><br>
@@ -18,5 +20,6 @@
     <button (click)="onJaime(2)">J’aime</button> {{tabFilms[2].nbJaime}}<br>
     <button (click)="onJaimePas(2)">J’aime pas</button> {{tabFilms[2].nbJeNaimeps}}<br>
     </div>
+    -->
 
 </div>
