--- a/projet1/src/styles.css
+++ b/projet1/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+h2,h3,p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+h2,h3{
+    font-weight: bold;
+}
+img{ width: 66%; height: 400px; }
