feat: routing error

--- a/projet1/src/app/app.component.html
+++ b/projet1/src/app/app.component.html
@@ -1,2 +1,10 @@
 <h1>Bienvenue à polytech cinéma club</h1>
+<h2> Ceci est le contenu de appComponent</h2>
+<nav>
+<ul>
+<li><a routerLink="chemin1">Lien vers comp1</a></li>
+<li><a routerLink="chemin2">Lien vers comp2</a></li>
+<li><a routerLink="cinema">Liste des Films</a></li>
+</ul>
+</nav>
 <router-outlet />
